add U-shape rubisco and flip move

--- a/CPP_version/Makefile
+++ b/CPP_version/Makefile
@@ -4,6 +4,8 @@ polymersim: *.cpp
 no_two: *.cpp
 	g++ -std=c++11 -DNDEBUG -DNO_TWO_END -O3 -o polymersim_$@ *.cpp
 
+midline: *.cpp
+	g++ -std=c++11 -DNDEBUG -DMIDLINE -O3 -o polymersim_$@ *.cpp
 clean:
 	rm polymersim
 	rm polymersim_no_two
